# momentic-onsite

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/scripts/: ingest_tests_to_mongo.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts
tests/: add-edit-and-delete-the-db-property.test.yaml  comment-on-text.test.yaml  duplicate-the-page-from-the-six-dot-menu.test.yaml  init-new-notion-doc.module.yaml  notion-log-in.module.yaml  open-a-db-page-in-side-peek-an-edit-the-title.test.yaml  page-sharing-w-diff-permissions.test.yaml  publish-page.test.yaml  trigger-a-db-automation.test.yaml
