[project]
name = "momentic-test-repo"
version = "0.1.0"
description = "FastAPI backend for Momentic test repository viewer and AI summaries"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "pymongo==4.8.0",
  "redis==5.1.1",
]

[tool.uv]
package = true

